Update input() process print()

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -58,11 +58,13 @@
                     <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a></li>
                     <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si pasa algo entonces haz esto</a></li>
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras esto no cambie repite</a></li>
+                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_entrada_proceso_salida.ipynb">Entrada -> Proceso -> Salida</a></li>
                     <li>
-                        Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5_funciones.ipynb">Entrada -> Proceso -> Salida</a>
-                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/5.1_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
+                        Unidad 6.1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.1_funciones.ipynb">Entrada -> Proceso -> Salida con Funciones</a>
+                        <ul><li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6.2_funciones_ejercicios.ipynb">Ejercicios extra de funciones</a></li></ul>
                     </li>
-                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/6_funciones_ya_definidas.ipynb">Funciones ya definidas</a></li>
+                    
                     <li>Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/7_listas.ipynb">Muchas variables con un solo nombre</a></li>
                     <li>
                         Unidad 8: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/8_for.ipynb">Para cada elemento de una lista</a>
