--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -53,8 +53,22 @@
                 <ul>
                     <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
                     <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
-                    <li>Unidad 3: <a href="#">Cajas negras preentrenadas</a></li>
-                    <li>Unidad 4: <a href="#">Fine tuning</a></li>
+                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
+                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a>
+                        <ul>
+                            <li>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:</li>
+                            <li><a href="#">Baseline</a></li>
+                            <li><a href="#">Bag of Words</a></li>
+                            <li><a href="#">Transformers Zero Shot</a></li>
+                            <li><a href="#">Transformers Finetuning</a></li>
+                            <li><a href="#">Transformers Ensemble</a></li>
+                        </ul>
+                    </li>
+                    <li>Unidad 5:<a href="#">Como obtener solo los vectores</a>
+                        <ul>
+                            <li><a href="#">El viejo y conocido KNN vuelve a ser util</a></li>
+                        </ul>
+                    </li>
                     <!--li>Unidad 4: LLM APIs
                         <ul>
                             <li><a href="#">Base de datos Vectoriales</a></li>
