Updated deeplearning finetuning

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -57,14 +57,14 @@
                     <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a>
                         <ul>
                             <li>Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:</li>
-                            <li><a href="#">Baseline</a></li>
-                            <li><a href="#">Bag of Words</a></li>
-                            <li><a href="#">Transformers Zero Shot</a></li>
-                            <li><a href="#">Transformers Finetuning</a></li>
-                            <li><a href="#">Transformers Ensemble</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
                         </ul>
                     </li>
-                    <li>Unidad 5:<a href="#">Como obtener solo los vectores</a>
+                    <li>Unidad 5: <a href="#">Como obtener solo los vectores</a>
                         <ul>
                             <li><a href="#">El viejo y conocido KNN vuelve a ser util</a></li>
                         </ul>
@@ -89,7 +89,6 @@
                                     <li><a href="#">Transformers</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">El viejo y conocido KNN</a></li>
                         </ul>
                     </li-->
                     
