Added zero shot classification

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -64,7 +64,8 @@
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
                         </ul>
                     </li>
-                    <li>Unidad 5: <a href="#">Como obtener solo los vectores</a>
+                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Finetuning</a>
+                    <li>Unidad 6: <a href="#">Como obtener solo los vectores</a>
                         <ul>
                             <li><a href="#">El viejo y conocido KNN vuelve a ser util</a></li>
                         </ul>
