--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -65,11 +65,7 @@
                         </ul>
                     </li>
                     <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
-                    <li>Unidad 6: <a href="#">Como obtener solo los vectores</a>
-                        <ul>
-                            <li><a href="#">El viejo y conocido KNN vuelve a ser util</a></li>
-                        </ul>
-                    </li>
+                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
                     <!--li>Unidad 4: LLM APIs
                         <ul>
                             <li><a href="#">Base de datos Vectoriales</a></li>
