Added OpenAI prompting

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -66,14 +66,14 @@
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
                         </ul>
                     </li>
-                    <!--li>Unidad 4: LLM APIs
+                    <li>Unidad 8: LLM APIs
                         <ul>
-                            <li><a href="#">Base de datos Vectoriales</a></li>
-                            <li><a href="#">OpenAI</a></li>
-                            <li><a href="#">LangChain</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting1.ipynb">OpenAI</a></li>
+                            <!--li><a href="#">LangChain</a></li>
+                            <li><a href="#">Base de datos Vectoriales</a></li-->
                         </ul>
                     </li>
-                    <li>
+                    <!--li>
                         Espiando dentro de las cajas negras de deep learning (material opcional avanzado):
                         <ul>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
