--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -38,8 +38,8 @@
                         <!--li><a href="../../../meetdates.html">Fechas de meet</a></li-->
                     </ul>
                     <br/><br/><br/>
-                    <!--a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a-->
-                    <a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/>
+                    <a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a>
+                    <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/-->
                     <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     <div class="footer"></div>
                 </div>
@@ -69,8 +69,8 @@
                     <li>Unidad 8: LLM APIs
                         <ul>
                             <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI</a></li>
-                            <!--li><a href="#">LangChain</a></li>
-                            <li><a href="#">Base de datos Vectoriales</a></li-->
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain.ipynb">LangChain</a></li>
+                            <!--li><a href="#">Base de datos Vectoriales</a></li-->
                         </ul>
                     </li>
                     <!--li>
