--- a/clases_presenciales.html
+++ b/clases_presenciales.html
@@ -40,7 +40,7 @@
                         <!--li><a href="#">Cursos Presenciales</a></li-->
                     </ul>
                     <br/><br/><br/>
-                    <a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a>
+                    <a class="github-button" href="https://github.com/amiune/freecodingtour" data-size="large" data-show-count="true" aria-label="Star amiune/freecodingtour on GitHub">Star</a><br/>
                     <!--a class="github-button" href="https://github.com/sponsors/amiune" data-icon="octicon-heart" data-size="large" aria-label="Sponsor @amiune on GitHub">Sponsor</a><br/-->
                     <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.es"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
                     <div class="footer"></div>
