--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -68,8 +68,8 @@
                     </li>
                     <li>Unidad 8: LLM APIs
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain.ipynb">LangChain</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
+                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
                             <!--li><a href="#">Base de datos Vectoriales</a></li-->
                         </ul>
                     </li>
