MNIST examples added

--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -51,6 +51,9 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Programacion Coding Tour</h1>
                 <p>Curso rapido de programacion en python. Desde cero.</p>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LOPzWyyT23k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
                 <h2>Contenido:</h2>
                 <ul>
                     <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a></li>
@@ -99,6 +102,7 @@
                 
             </div>
         </div>
+  
         <script src="../../../assets/js/jquery.min.js"></script>
         <script src="../../../assets/js/popper.js"></script>
         <script src="../../../assets/js/bootstrap.min.js"></script>
