Changed Discord for Telegram Group

--- a/contact.html
+++ b/contact.html
@@ -50,13 +50,13 @@
             <div id="content" class="p-4 p-md-5 pt-5">
                 <h1 class="mb-4">Contactanos</h1>
                 <p>Puedes contactar conmigo a traves de mi email o linkedin. 
-                    Ademas tambien por discord donde puedes compartir dudas con otros estudiantes:</p>
+                    Ademas tambien por el grupo de telegram donde puedes compartir dudas con otros estudiantes:</p>
 
                 <p>
                     <ul>
                         <li>Email: amiune<script>document.write("@")</script><span style="display:none">@hotmail.com</span><!-- @twitter.com -->gmail.com</li>
                         <li>Linkedin: <a target="_blank" href="https://www.linkedin.com/in/amiune/">https://www.linkedin.com/in/amiune/</a></li>
-                        <li>Discord: <a target="_blank" href="https://discord.gg/U2rwd4Z5">https://discord.gg/U2rwd4Z5</a></li>
+                        <li>Grupo de Telegram: <a target="_blank" href="https://t.me/freecodingtour">https://t.me/freecodingtour</a></li>
                     </ul>
                 </p>
                 
