target blank added to notebook links

--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -51,45 +51,45 @@
                     las herramientas del deep learning en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
-                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
-                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
-                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
-                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
-                    <li>Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
+                    <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb">De imagenes a vectores</a></li>
+                    <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/2_texto_a_vectores.ipynb">De texto a vectores</a></li>
+                    <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb">Cajas negras preentrenadas</a></li>
+                    <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/4_finetuning.ipynb">Finetuning</a></li>
+                    <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/5_zero_shot_classification.ipynb">Zero Shot Classification</a>
+                    <li>Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/6_obtener_vectores.ipynb">Como obtener solo los vectores</a></li>
                     <li>Unidad 7: Un ejemplo de clasificacion de texto, desde BoW hasta un Ensemble de Transformers:
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Baseline.ipynb">Baseline</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_BoW.ipynb">Bag of Words</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediciton_Zeroshot.ipynb">Transformers Zero Shot</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Transformer.ipynb">Transformers Finetuning</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/HF_movie_genre_prediction_Ensemble.ipynb">Transformers Ensemble</a></li>
                         </ul>
                     </li>
                     <li>Unidad 8: LLM APIs
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
                             <!--li><a href="#">Base de datos Vectoriales</a></li-->
                         </ul>
                     </li>
                     <li>
                         Espiando dentro de las cajas negras de deep learning (material opcional avanzado):
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
-                            <li><a href="#">De redes neuronales a matrices y grafos</a></li>
-                            <li><a href="#">Redes Profundas</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
+                            <li><a target="_blank" href="#">De redes neuronales a matrices y grafos</a></li>
+                            <li><a target="_blank" href="#">Redes Profundas</a></li>
                             <li>Arquitecturas:
                                 <ul>
                                     
-                                    <li><a href="#">Redes Convolucionales</a>
+                                    <li><a target="_blank" href="#">Redes Convolucionales</a>
                                         <ul>
-                                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
-                                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
+                                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
+                                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="#">Encoders</a></li>
-                                    <li><a href="#">Transformers</a></li>
+                                    <li><a target="_blank" href="#">Encoders</a></li>
+                                    <li><a target="_blank" href="#">Transformers</a></li>
                                 </ul>
                             </li>
                         </ul>
