--- a/cursos/espanol/datascience/datascience.html
+++ b/cursos/espanol/datascience/datascience.html
@@ -51,43 +51,43 @@
                     las herramientas de la ciencia de datos en sus respectivas actividades.</p>
                 <h2>Contenido:</h2>
                 <ul>
-                    <li>Unidad 0: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
-                    <li>Unidad 1: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
-                    <li>Unidad 2: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
-                    <li>Unidad 3: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
-                    <li>Unidad 4: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
-                    <li>Unidad 5: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
+                    <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/0_intro.ipynb">Como vender mi telefono movil</a></li>
+                    <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/1_pandas.ipynb">Convertir mis datos en una tabla</a></li>
+                    <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/2_vectores.ipynb">Convertir todos los datos a numeros</a></li>
+                    <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/3_train_test.ipynb">Separar la tabla en dos: Entrenamiento y Prueba</a></li>
+                    <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/4_caja_negra.ipynb">Entrenando nuestra caja negra</a></li>
+                    <li>Unidad 5: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/5_tipos_de_caja_negra.ipynb">Tipos de caja negra</a></li>
                     <li>
-                        Unidad 6: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
+                        Unidad 6: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6_metricas.ipynb">Como saber si mi caja negra esta bien entrenada?</a>
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/6.1_ejercicio_diabetes_parte1.ipynb">Ejercicio de Clasificacion Parte 1</a></li>
                         </ul>
                     </li>
                     <li>
-                        Unidad 7: <a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
+                        Unidad 7: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7_ajuste_de_parametros.ipynb">Seleccionando los mejores parametros para mi caja negra</a>
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/7.1_ejercicio_diabetes_parte2.ipynb">Ejercicio de Clasificacion Parte 2</a></li>
                         </ul>
                     </li>
                     <li>Analisis y limpieza de datos (preprocesamiento):
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A0_intro.ipynb">Intro al analisis y preprocesamiento de datos</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1_graficos_seaborn.ipynb">Graficos para analisis</a>
                                 <ul>
-                                    <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
+                                    <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A1.1_graficos_matplotlib.ipynb">Graficos avanzados</a></li>
                                 </ul>
                             </li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A2_jugando_con_pandas.ipynb">Jugando con Pandas (material opcional)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/A3_jugando_con_numpy.ipynb">Jugando con Numpy (material opcional)</a></li>
                         </ul>
                     </li>
                     <li>Espiando adentro de las cajas negras (material opcional avanzado):
                         <ul>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
-                            <li><a href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E1_knn.ipynb">Vecinos Cercanos (KNN)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E2_arbol.ipynb">Arboles de Decision (Decision Trees)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E3_regresion_lineal.ipynb">Regresion Lineal y Logistica (Lineal and Logistic Regression)</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E4_naive_bayes.ipynb">Naive Bayes</a></li>
+                            <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/datascience/E5_ensambles.ipynb">Ensambles (Ensembles)</a></li>
                         </ul>
                     </li>
                 </ul>
