--- a/cursos/espanol/programacion/programacion.html
+++ b/cursos/espanol/programacion/programacion.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li>Unidad 0: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/0_intro.ipynb">Una calculadora potente</a> [<a href="#" class="video-btn" data-video-id="LOPzWyyT23k">Video</a>]</li>
                     <li>Unidad 1: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/1_variables.ipynb">Guardando resultados en la memoria</a> [<a href="#" class="video-btn" data-video-id="ay8sMqC8yQI">Video</a>]</li>
-                    <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a></li>
+                    <li>Unidad 2: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/2_condiciones.ipynb">Comparar dos valores</a> [<a href="#" class="video-btn" data-video-id="bvm6h14Lzz0">Video</a>]</li>
                     <li>Unidad 3: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/3_if.ipynb">Si la condicion es verdadera haz esto</a></li>
                     <li>Unidad 4: <a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/programacion/4_while.ipynb">Mientras la condicion es verdadera repite</a></li>
                     <li>Sientes que no entiendes? Haz una pausa y prueba con estos <a href="https://blockly.games/?lang=es">Juegos de Programacion</a></li>
