--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <!-- About Section -->
   <section id="about" class="about container">
     <div class="about-info">
-        <h2 >Por que FreeCodingTour.com?</h2>
+        <h2 >Por que Free Coding Tour?</h2>
         <p>
             Como profesor de programacion e inteligencia artificial para alumnos sin conocimiento previo y
             tambien universitarios siempre me enfrento con dos problemas: 
