--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -57,6 +57,9 @@
         <ul>
           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/OpenAI_Prompting.ipynb">OpenAI Prompting</a></li>
           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Prompting.ipynb">LangChain Prompting</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Chains.ipynb">LangChain Chains</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_Agents.ipynb">LangChain Agents</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/LangChain_RAG.ipynb">LangChain RAG</a></li>
         </ul>
 
         <hr class="separator">
@@ -64,8 +67,7 @@
         <h3>Espiando dentro de las cajas negras de deep learning (material opcional avanzado):</h3>
         <ul>
           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb">Intro a redes neuronales</a></li>
-          <li><a target="_blank" href="#">De redes neuronales a matrices y grafos</a></li>
-          <li><a target="_blank" href="#">Redes Profundas</a></li>
+          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E1_Backprop_PytorchAutograd.ipynb">De redes neuronales a matrices y grafos</a></li>
           <li>Arquitecturas:
               <ul>
                   
@@ -73,6 +75,8 @@
                       <ul>
                           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
                           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
+                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning1.ipynb">CNN Finetuning con Pytorch</a></li>
+                          <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
                       </ul>
                   </li>
                   <li><a target="_blank" href="#">Encoders</a></li>
