--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -71,7 +71,7 @@
           <li>Arquitecturas:
               <ul>
                   
-                  <li><a target="_blank" href="#">Redes Convolucionales</a>
+                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E2_Convolutional_Arch.ipynb">Redes Convolucionales</a>
                       <ul>
                           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Keras.ipynb">CNN con Keras</a></li>
                           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch.ipynb">CNN con Pytorch</a></li>
@@ -79,8 +79,9 @@
                           <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/CNN_MNIST_Pytorch_Finetuning2.ipynb">CNN Finetuning 2 con Pytorch</a></li>
                       </ul>
                   </li>
-                  <li><a target="_blank" href="#">Encoders</a></li>
-                  <li><a target="_blank" href="#">Transformers</a></li>
+                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E3_Autoencoders_Arch.ipynb">Autoencoders</a></li>
+                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E4_Diffusers_Arch.ipynb">Diffusers</a></li>
+                  <li><a target="_blank" href="https://githubtocolab.com/amiune/freecodingtour/blob/main/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb">Transformers</a></li>
               </ul>
           </li>
         </ul>
