--- a/cursos/espanol/deeplearning/deeplearning.html
+++ b/cursos/espanol/deeplearning/deeplearning.html
@@ -27,7 +27,7 @@
   <!-- Classes Section -->
   <section id="classes" class="classes container">
     <div class="classes-info">
-        <h1>Deep Learning Coding Tour</h1>
+        <h1>Inteligencia Artificial Coding Tour</h1>
         <p class="classes-intro">Curso para que personas de diferentes ambitos y 
           formaciones puedan utilizar las herramientas del deep learning en 
           sus respectivas actividades.</p>
