--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
     <div class="course-card">
       <div class="course-info">
             <div class="image-container">
+              <a href="https://www.freecodingtour.com/cursos/espanol/programacion/programacion.html">
                 <img src="./assets/img/programacion.jpeg" alt="Programacion" class="image">
                 <div class="centered-text">PROGRAMACION</div>
+              </a>
             </div>
             <div class="text">
                 <p>Curso rapido de programacion en python. Desde cero.</p>
@@ -66,8 +68,10 @@
                 <ul><li><a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">IR AL CURSO</a></li></ul>
             </div>
             <div class="image-container">
+              <a href="https://www.freecodingtour.com/cursos/espanol/datascience/datascience.html">
                 <img src="./assets/img/cienciadedatos.webp" alt="Ciencia de Datos" class="image">
                 <div class="centered-text">CIENCIA DE DATOS</div>
+              </a>
               </div>
         </div>
       </div>
@@ -75,8 +79,10 @@
       <div class="course-card">
         <div class="course-info">
             <div class="image-container">
+              <a href="https://www.freecodingtour.com/cursos/espanol/deeplearning/deeplearning.html">
               <img src="./assets/img/ia.png" alt="Inteligencia Artificial" class="image">
               <div class="centered-text">INTELIGENCIA ARTIFICIAL</div>
+            </a>
             </div>
             <div class="text">
               <p>Curso para que personas de diferentes ambitos y formaciones puedan utilizar las herramientas 
